# oore.build

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  .woodpecker.yml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  FRONTEND_PRODUCT_PLAN.md  Makefile  README.md  SECURITY.md  SUPPORT.md  package.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: alpha_test_report.md  bug_report.md  config.yml  docs_feedback.md  feature_request.md
.github/workflows/: autotag.yml  docs-guard.yml  release.yml  validate.yml
.woodpecker/: autotag.yml  release.yml  validate.yml
apps/docs-site/: .cta.json  .oxlintrc.json  .prettierignore  README.md  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
apps/site/: index.html  package.json
apps/web/: .cta.json  .oxlintrc.json  README.md  components.json  eslint.config.js  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
configs/: shadcn-preset.txt
crates/oore/: Cargo.toml
crates/oore-contract/: Cargo.toml
crates/oore-runner/: Cargo.toml
crates/oore-runner/src/: lib.rs
crates/oore/src/: main.rs  update_supervisor.rs
crates/oore/tests/: cli_unimplemented.rs
crates/oored/: Cargo.toml  rbac_policy.csv
crates/oored/migrations/: 001_setup_state.sql  003_avatar_url.sql  009_pipeline_execution_config.sql  010_artifact_checksum_dedupe.sql  011_artifact_storage_settings.sql  012_instance_preferences.sql  014_pipeline_ios_signing.sql  015_runtime_mode_preferences.sql  016_local_git_integrations.sql  017_external_access_network_settings.sql  018_remote_auth_and_trusted_proxy.sql  019_notification_channels.sql  020_retention_policy.sql  021_project_members.sql  022_build_rerun.sql  022_runner_notification_deliveries.sql  023_api_tokens.sql  023_build_rerun.sql  025_artifact_expiry_and_download_tokens.sql  026_email_notification_channels.sql  027_trusted_proxy_setup_owner_email.sql  028_artifact_lifecycle.sql  029_frontend_pairing_invites.sql  030_repository_avatar_url.sql  031_artifact_delivery_url.sql  032_warpgate_install_ticket.sql  033_build_changelog.sql  034_gitlab_repository_webhook_secrets.sql  035_build_signing_grants.sql  036_direct_runner_execution_policy.sql  037_build_claim_queue_index.sql  037_no_worry_runner_policy.sql
crates/oored/src/: api_tokens.rs  apple_api.rs  artifact_install.rs  artifact_tokens.rs  artifacts.rs  audit_logs.rs  auth.rs  background.rs  builds.rs  crypto.rs  embedded_runner.rs  extractors.rs  frontend_pairing.rs  instance_settings.rs  lib.rs  local_recovery.rs  logs.rs  main.rs  notification_channels.rs  notification_dispatch.rs  observability.rs  oidc.rs  pipeline_ios_signing.rs  pipeline_signing.rs  pipelines.rs  project_members.rs  project_rbac.rs  projects.rs  rbac.rs  repository_workflows.rs  retention.rs  runners.rs  runtime_updates.rs  scheduler.rs  session.rs  storage.rs  store.rs  token.rs  users.rs  util.rs
crates/oored/src/integrations/: github.rs  gitlab.rs  local_git.rs  mod.rs  webhooks.rs
crates/oored/tests/: artifact_storage_settings_integration.rs  audit_logs_integration.rs  auth_lifecycle_integration.rs  build_concurrency.rs  build_reproducibility_integration.rs  embedded_runner_integration.rs  external_access_oidc_integration.rs  external_access_security_integration.rs  integration_deletion.rs  local_login_integration.rs  local_recovery_integration.rs  logs_artifacts_integration.rs  no_worry_runner_migration.rs  notification_security_integration.rs  oidc_start_integration.rs  project_pipeline_integration.rs  retention_security_integration.rs  runner_integration.rs  setup_integration.rs  user_preview_integration.rs  web_performance_integration.rs  webhook_integration.rs
crates/oored/tests/common/: mod.rs
docs/: README.md  changes.md  documentation-policy.md  platform-contract.md  scm-integration-v1.md  strict-guidelines.md  v1-roadmap.md  v1-user-journey.md
docs/adr/: 0007-external-access-hard-preflight-and-loopback-boundary.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/features/: 2026-02-05-setup-bootstrap-foundation.md  2026-02-06-design-system-governance.md  2026-02-06-oidc-auth-and-session-management.md  2026-02-06-setup-compliance-alignment.md  2026-02-06-setup-wizard-ui.md  2026-02-06-vitepress-docs-placeholder.md  2026-02-07-build-lifecycle-api.md  2026-02-07-scm-integrations-github-gitlab-v1.md  2026-02-07-v1-ci-user-journey-gate.md  2026-02-08-artifact-storage-download-policy.md  2026-02-08-branding-logo-rollout.md  2026-02-08-build-isolation.md  2026-02-08-live-build-logs.md  2026-02-08-pipelines-api.md  2026-02-08-runner-protocol.md  2026-02-08-seo-title-metadata-alignment.md  2026-02-09-admin-preferences-and-key-storage-mode.md  2026-02-09-artifact-storage-settings-ui-and-backends.md  2026-02-09-embedded-local-runner-default.md  2026-02-09-file-first-pipeline-config-and-ui-fallback.md  2026-02-09-keychain-encryption-key-and-multi-origin-cors.md  2026-02-09-runner-management-ui.md  2026-02-11-ios-ad-hoc-signing-pipeline-api-device-registration.md  2026-02-11-release-installer-and-landing-site.md  2026-02-12-dev-fresh-setup-and-state-isolation.md  (+13 more)
scripts/: check-feature-docs.sh  clean-dev-state.sh  dev-fresh-setup.sh  install-acceptance.sh  install-launchd-release-poller.sh  install-launchd-release-webhook-daemon.sh  install-launchd-release-webhook.sh  install.sh  release-cut.sh  release-local.sh  release-poll-tags.sh  release-webhook-server.sh  sync-install-script.sh  uninstall-acceptance.sh  uninstall.sh
tools/: autotag.sh  check-web-bundle-budget.sh  clean-dev-state.sh  dev-fresh-setup.sh  direct-runner-upgrade-smoke.test.ts  direct-runner-upgrade-smoke.ts  docs-check.sh  generate-release-index.test.ts  generate-release-index.ts  lint-woodpecker.sh  release-smoke.sh  stage-fvm.sh  sync-install-scripts.sh  ui-init.sh  update-dependencies.sh  update-shadcn.sh  validate-ci.sh  verify-pages-deploy.sh  web-performance-baseline.test.ts  web-performance-baseline.ts  web-runtime-performance.ts
(+592 files in other folders)
