[workspace]
members = ["crates/oore", "crates/oore-runner", "crates/oored", "crates/oore-contract"]
resolver = "2"

[workspace.package]
version = "0.1.10"
edition = "2024"
license = "MIT"
repository = "https://github.com/oore-ci/oore.build"

[workspace.dependencies]
anyhow = "1.0"
async-stream = "0.3"
casbin = "2"
axum = "0.8"
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "5"
hex = "0.4"
humantime = "2.1"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "signal", "time"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
openidconnect = "4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
dialoguer = "0.11"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors"] }
hyper = "1"
http-body-util = "0.1"
semver = "1"
flate2 = "1"
tar = "0.4"
tempfile = "3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
urlencoding = "2"
jsonwebtoken = "9"
ring = "0.17"
base64 = "0.22"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
zeroize = { version = "1", features = ["derive"] }
aws-sdk-s3 = "1"

# Observability: OpenTelemetry + Prometheus
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.29"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# OpenAPI documentation
utoipa = { version = "5", features = ["axum_extras"] }
ipnet = "2.10"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
