[package]
name = "oore-runner"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
hex.workspace = true
oore-contract = { path = "../oore-contract" }
reqwest.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "process", "sync", "time"] }
url.workspace = true
