[package]
name = "oore-runner"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
base64.workspace = true
hex.workspace = true
libc = "0.2"
oore-contract = { path = "../oore-contract" }
reqwest.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "process", "sync", "time"] }
zeroize.workspace = true
