[package]
name = "oored"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
test-support = []

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
axum.workspace = true
casbin.workspace = true
clap.workspace = true
dirs.workspace = true
hex.workspace = true
jsonwebtoken.workspace = true
oore-contract = { path = "../oore-contract" }
oore-runner = { path = "../oore-runner" }
openidconnect.workspace = true
rand.workspace = true
reqwest.workspace = true
url.workspace = true
urlencoding.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
ring.workspace = true
base64.workspace = true
sqlx.workspace = true
zeroize.workspace = true
aws-sdk-s3.workspace = true
aws-config.workspace = true
utoipa.workspace = true
ipnet.workspace = true

# Observability
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

[[bin]]
name = "openapi-export"
path = "src/bin/openapi_export.rs"

[dev-dependencies]
tower.workspace = true
hyper.workspace = true
http-body-util.workspace = true
tempfile.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.11"
